--- a/package.json
+++ b/package.json
@@ -2,9 +2,20 @@
   "name": "FileStoreService",
   "version": "1.0.0",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "gridfs-stream": "^1.1.1",
     "joi": "^17.12.2",
-    "mongoose": "^8.2.4",
+    "method-override": "^3.0.0",
+    "mongodb": "^5.9.1",
+    "mongoose": "^8.3.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0"
+  },
+  "resolutions": {
+    "multer-gridfs-storage/mongodb": "^5.9.1"
   }
 }
