--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,24 @@
 {
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "chai": "^5.1.0",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "gridfs-stream": "^1.1.1",
+    "jest": "^29.7.0",
+    "jest-mock": "^29.7.0",
     "joi": "^17.12.3",
     "method-override": "^3.0.0",
+    "mocha": "^10.4.0",
     "mongodb": "^5.9.1",
     "mongoose": "^8.3.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
-    "redis": "^4.6.13"
+    "redis": "^4.6.13",
+    "supertest": "^6.3.4"
   }
 }
